# HierarchicalScenes

./: .gitmodules  CMakeLists.txt  README.md  main.c
assets/: maxwell_cat.gltf
